--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -2749,10 +2749,10 @@
     <!-- HOtel V2A number of reviews -->
     <plurals name="hotel_number_of_reviews">
         <item quantity="zero">沒有評語</item>
-        <item quantity="one">查看 %d 則評語</item>
-        <item quantity="two">查看 %d 則評語</item>
-        <item quantity="many">查看 %d 則評語</item>
-        <item quantity="other">查看 %d 則評論</item>
+        <item quantity="one">查看 %s 則評語</item>
+        <item quantity="two">查看 %s 則評語</item>
+        <item quantity="many">查看 %s 則評語</item>
+        <item quantity="other">查看 %s 則評論</item>
     </plurals>
 
     <string name="zero_reviews">0 則評論</string>
