5233. Checkout UI Polish
Fixing 2nd line when google wallet or stored cc is used.
When there are no resort fees, we need space between the total price and info icon
Updating google wallet icons

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -211,6 +211,8 @@
     <string name="checkout_hotelsv2_enter_payment_details_line1">Payment Details</string>
     <!-- Text for enter payment details line 2 -->
     <string name="checkout_hotelsv2_enter_payment_details_line2">Select Payment Type</string>
+    <!-- Label to indicate that the user has selected a stored credit card -->
+    <string name="checkout_payment_line2_storedcc">Stored Credit Card</string>
 
     <!-- Hotels V2 slide to reserve -->
     <string name="hotelsv2_slide_reserve">Slide to reserve</string>
